--- a/MyApplication/app/src/main/res/layout/activity_kategorie_verwaltung.xml
+++ b/MyApplication/app/src/main/res/layout/activity_kategorie_verwaltung.xml
@@ -6,8 +6,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10">
+        android:layout_height="wrap_content">
 
         <Button
             android:layout_width="wrap_content"
@@ -15,8 +14,7 @@
             android:text="Kategorie hinzufügen"
             android:id="@+id/buttonAddKategorie"
             android:layout_weight="1"
-            android:nestedScrollingEnabled="false"
-            android:onClick="addKategorie" />
+            android:nestedScrollingEnabled="false" />
 
         <Button
             android:layout_width="wrap_content"
@@ -29,7 +27,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/listViewKategorien"
-        android:layout_weight="1"/>
+        />
 </LinearLayout>
