--- a/MyApplication/app/src/main/res/layout/activity_kategorie_verwaltung.xml
+++ b/MyApplication/app/src/main/res/layout/activity_kategorie_verwaltung.xml
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:text="Kategorie entfernen"
             android:id="@+id/buttonDeleteKategorie"
-            android:layout_weight="1"
-            android:onClick="deleteKategorie" />
+            android:layout_weight="1" />
     </LinearLayout>
 
     <ListView
