--- a/MyApplication/app/src/main/res/layout/activity_add_einnahme.xml
+++ b/MyApplication/app/src/main/res/layout/activity_add_einnahme.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Einnahme Hinzufügen"
-            android:id="@+id/textView9"
+            android:id="@+id/textViewEinnahmeAdd"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
