--- a/MyApplication/app/src/main/res/layout/activity_verbesserungen.xml
+++ b/MyApplication/app/src/main/res/layout/activity_verbesserungen.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Verbesserungen"
-            android:id="@+id/textView20"
+            android:id="@+id/textViewVerbesserungen"
             android:textSize="40px"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -30,7 +30,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView"
+            android:id="@+id/listViewVerbesserungen"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
