--- a/MyApplication/app/src/main/res/layout/activity_wochen_statistik.xml
+++ b/MyApplication/app/src/main/res/layout/activity_wochen_statistik.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wochen Statistik"
-            android:id="@+id/textView15"
+            android:id="@+id/textViewStatistik"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
