Smiley färben/blang
Vollständig.

--- a/MyApplication/app/src/main/res/layout/activity_kategorie_details.xml
+++ b/MyApplication/app/src/main/res/layout/activity_kategorie_details.xml
@@ -12,10 +12,25 @@
         android:layout_gravity="center_horizontal"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textViewKategorieDetailBeschreibung" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Beschreibung: "
+            android:id="@+id/textView"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text"
+            android:id="@+id/textViewKategorieDetailBeschreibung" />
+    </LinearLayout>
+
 </LinearLayout>
