Ausgaben/Einnahmen anzeigen/blang

--- a/MyApplication/app/src/main/res/layout/activity_aktivitaeten_anzeigen.xml
+++ b/MyApplication/app/src/main/res/layout/activity_aktivitaeten_anzeigen.xml
@@ -3,6 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textViewGesamtAktivität"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20dp" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
