--- a/MyApplication/app/src/main/res/layout-land/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout-land/activity_main.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/buttonStatistiken"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="kategorieStatistik"
+                android:onClick="Statistik"
                 android:text="Statistik Anzeigen"
                 android:layout_weight="1"/>
 
