--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:text="Statistik Anzeigen"
             android:id="@+id/buttonStatistiken"
             android:layout_gravity="center_horizontal"
-            android:onClick="kategorieStatistik" />
+            android:onClick="Statistik" />
 
         <Button
             android:layout_width="match_parent"
