--- a/MyApplication/app/src/main/res/layout/activity_statistik.xml
+++ b/MyApplication/app/src/main/res/layout/activity_statistik.xml
@@ -18,7 +18,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Teuerste Kategorie: "
+                android:text="Meiste Ausgaben: "
                 android:id="@+id/textView2"
                 android:textStyle="bold" />
 
