--- a/MyApplication/app/src/main/res/layout/activity_statistik.xml
+++ b/MyApplication/app/src/main/res/layout/activity_statistik.xml
@@ -102,4 +102,37 @@
             android:id="@+id/buttonStatistikAlleMonate" />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="In dieser Woche verbraucht: "
+                android:id="@+id/textView16"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/textViewActualWeek" />
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alle 4 Wochen"
+            android:id="@+id/buttonWeek" />
+    </LinearLayout>
+
 </LinearLayout>
