--- a/MyApplication/app/src/main/res/menu/mainmenu.xml
+++ b/MyApplication/app/src/main/res/menu/mainmenu.xml
@@ -12,4 +12,8 @@
     <item
         android:id="@+id/einnahmenmenu"
         android:title="Einnahmen anzeigen"></item>
+    <item
+        android:id="@+id/resetmenu"
+        android:title="Reset"></item>
+
 </menu>
